About me fixing screen

--- a/client/src/styling/aboutme.css
+++ b/client/src/styling/aboutme.css
@@ -72,7 +72,7 @@
     border-radius: 10px;
     background-color: #b7d5ae;
     box-shadow: 0 15px 20px rgba(0, 0, 0, 0.25);
-    width: 101.38rem;
+    width: 164vh;
     height: 45.81rem;
     overflow: hidden;
     text-align: center;
