--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,155 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;1,400&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhai:wght@400&display=swap");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url('https://fonts.googleapis.com/css2?family=Gloock&family=Poppins:wght@300;500;600&display=swap');
+
+/* font-family: 'Gloock', serif;
+font-family: 'Poppins', sans-serif; */
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body {
+:root {
+    --color-bg: #42956A;
+    --color-bg-variant: #60AE86;
+    --color-primary: #D2D886;
+    --color-primary-variant: #D2D886;
+    --color-font: #F8FADB;
+    --color-font-variant: #4E4F43;
+    --color-white: #FFF;
+    --color-light: rgba(255, 255, 2555, 0.6);
+
+    --container-width-lg: 75%;
+    --container-width-md: 86%;
+    --container-width-sm: 90%;
+
+    --transition: all 400ms ease;
+}
+
+* {
     margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
     line-height: normal;
+    font-family: 'Poppins', sans-serif;
+    background-color: #F8FADB;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%234E4F43' stroke-width='5.9' stroke-opacity='0.12' %3E%3Ccircle fill='%23F8FADB' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23f5f8d8' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%23f1f7d5' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%23eef5d2' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23eaf4cf' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23e6f2cd' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%23e2f1ca' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%23deefc8' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%23daeec5' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%23d6ecc3' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23d1ebc1' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23cde9bf' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%23c8e8bd' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%23c4e7bb' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%23bfe5b9' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%23bae4b8' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%23b5e2b6' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%23B0E1B5' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
+    background-attachment: fixed;
+    background-size: cover;
+    color: var(--color-font);
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+/* --------------------------- GENERAL CLASSES --------------------------- */
+
+.container {
+    width: var(--container-width-lg);
+    margin: 0 auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-weight: 500;
+    font-family: 'Gloock', serif;
+}
+
+h1 {
+    font-size: 2.5rem;
+}
+
+section {
+    margin-top: 8rem;
+}
+
+section>h2,
+section>h5 {
+    text-align: center;
+    color: var(--color-font-variant);
+}
+
+section>h2 {
+    color: var(--color-white);
+    margin-bottom: 3rem;
+}
+
+.text-light {
+    color: var(--color-light);
+}
+
+a {
+    color: var(--color-font-variant);
+    transition: var(--transition);
+}
+
+a:hover {
+    color: var(--color-white);
+}
+
+.btn {
+    width: max-content;
+    display: inline-block;
+    color: var(--color-bg-variant);
+    padding: 0.75rem 1.2rem;
+    cursor: pointer;
+    border: 1px solid var(--color-bg-variant);
+    transition: var(--transition);
+}
+
+.btn:hover {
+    background: var(--color-white);
+    color: var(--color-font-variant);
+    border-color: transparent;
+}
+
+.btn-primary {
+    background-color: var(--color-bg);
+    color: var(--color-font);
+
+}
+
+img {
+    display: block;
+    width: 100%;
+    object-fit: cover;
+}
+
+/* --------------------------- MEDIA QUERIES --------------------------- */
+
+/* MD */
+@media screen and (max-width: 1024px) {
+    .container {
+        width: var(--container-width-md);
+    }
+
+    section {
+        margin-top: 6rem;
+    }
+}
+
+/* SM */
+@media screen and (max-width: 600px) {
+    .container {
+        width: var(--container-width-sm);
+    }
+
+    section>h2 {
+        margin-bottom: 6rem;
+    }
 }
