--- a/client/src/styling/header.css
+++ b/client/src/styling/header.css
@@ -1,7 +1,11 @@
 .box-blob {
+    display: flex;
+    position: relative;
+    width: 600px;
+    height: 600px;
     overflow: hidden;
-    width: 50vh;
-    height: 50vh;
+    align-items: center;
+    justify-items: center;
 }
 
 .box-blob img {
@@ -9,4 +13,16 @@
     height: 100%;
     object-fit: cover;
     object-position: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    mask: url(#miMascara);
+}
+
+.box-blob svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
